# RGB

./: CMakeLists.txt  sdkconfig
components/lvgl__lvgl/: lv_conf.h  lv_conf_template copy.h  lvgl.h
main/: CMakeLists.txt  main.c
main/LCD_Driver/: ST7701S.c  ST7701S.h
main/ui/: fonts.h  images.c  images.h  screens.c  screens.h  ui.c  ui.h  ui_font_lexenblack.c  ui_font_lexend.c  ui_font_lexenlight.c  ui_image_image1_2_4.c  ui_image_image1_8.c  ui_image_path7_1_5.c  ui_image_path7_2.c
